--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -32,11 +32,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="./add">Add books</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./search">Search</a>
+              </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
     </nav>
