--- a/frontend/views/search.ejs
+++ b/frontend/views/search.ejs
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./">Home</a>
+            <a class="nav-link" aria-current="page" href="./">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./browse">Rate books</a>
@@ -34,24 +34,47 @@
             <a class="nav-link" href="./add">Add books</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./search">Search</a>
+            <a class="nav-link active" href="./search">Search</a>
           </li>
         </ul>
       </div>
     </div>
-</nav>
+  </nav>
 
-    <div class="center middle" id="search-container">
-        <div class="search-box">
-            <button class="btn-search" id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
-            <input type="text" id="search-bar" class="input-search" placeholder="Type to Search...">
-        </div>
-        <div class="white_text center_text medium_text" id="container">
-        </div>
+  <div class="position-absolute top-50 start-50 translate-middle">
+    <div class="" id="search-container">
+      <div class="search-box">
+          <button class="btn-search" id="search-button"><i class="fa-solid fa-magnifying-glass"></i></button>
+          <input autocomplete="off" type="text" id="search-bar" class="input-search" placeholder="Type to Search...">
+      </div>
     </div>
-    <script src="https://kit.fontawesome.com/28100bcb2a.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="/frontend/js/search.js"></script>
+
+    <div class="album visually-hidden">
+      <div class="container">
+
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-1 g-3">
+          <div class="col">
+            <div class="card shadow-sm">
+              <img id="bookCover" src="" alt="Book cover" class="img-fluid"></img>
+
+              <div class="card-body">
+                <p class="card-text" id="bookName"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <small class="text-muted" id="bookAuthor">
+                  </small>
+                  <div class="text-muted" id="bookRating"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://kit.fontawesome.com/28100bcb2a.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="/frontend/js/search.js"></script>
 </body>
 </html>
