--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -54,6 +54,7 @@
     </section>
   
     <div class="album py-5 bg-light">
+      <div class="text-center fs-1">Top rated books</div>
       <div class="container">
   
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
