--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -60,7 +60,10 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
-              <img id="bookCover1" src="" alt="Book cover" class="img-fluid"></img>
+              <div class="img-wrapper">
+                <div class="top-right">Top Right</div>
+                <img id="bookCover1" src="" alt="Book cover" class="img-fluid"></img>
+              </div>
   
               <div class="card-body">
                 <p class="card-text" id="bookName1"></p>
