--- a/frontend/views/search.ejs
+++ b/frontend/views/search.ejs
@@ -28,7 +28,7 @@
             <a class="nav-link" aria-current="page" href="./">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./browse">Rate books</a>
+            <a class="nav-link" href="./browse">Browse books</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./add">Add books</a>
