added loading on book add

--- a/frontend/views/add.ejs
+++ b/frontend/views/add.ejs
@@ -46,14 +46,14 @@
       <div class="invalid-feedback">
         Please provide a valid name.
       </div>
-      <button class="btn btn-light" type="submit">Search</button>
+      <button id="searchButton" class="btn btn-light" type="submit">Search</button>
     </form>
   
     <ul class="list-group" id="lista">
       <li class="list-group-item">Book name: <div id="listName"></div></li>
       <li class="list-group-item">Author: <div id="listAuthor"></div></li>
       <li class="list-group-item">Release date: <div id="listDate"></div></li>
-      <button type="button" class="btn btn-light" id="buttonRequest">Add</button>
+      <button type="button" class="btn btn-light" id="addButton">Add</button>
     </ul>
   </div>
   
