loading on change site

--- a/frontend/views/browse.ejs
+++ b/frontend/views/browse.ejs
@@ -40,6 +40,12 @@
       </div>
     </div>
   </nav>
+  
+  <div id="loading" class="position-absolute top-50 start-50 translate-middle">
+    <div class="progress position-absolute top-50 start-50 translate-middle" style="width: 50%">
+        <div id="progress" class="progress-bar bg-info" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+  </div>
 
   <div class="album py-5 bg-light">
     <div class="container">
@@ -234,5 +240,6 @@
   <script src="/frontend/js/covers.js"></script>
   <script src="/frontend/js/pagination.js"></script>
   <script src="/frontend/js/give-rating.js"></script>
+  <script src="/frontend/js/loading.js"></script>
 </body>
 </html>
