--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -14,3 +14,10 @@ nav {
   top: 8px;
   right: 16px;
 }
+
+#loading {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
