darkmode on home page

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -10,6 +10,8 @@ nav {
 
 .top-right {
   color: white;
+  background-color: transparent;
+  border: none;
   position: absolute;
   top: 8px;
   right: 16px;
