--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/frontend/styles/style.css">
     <link rel="stylesheet" href="/frontend/styles/album.css">
     <title>BooksApp</title>
@@ -37,6 +38,7 @@
               </li>
             </ul>
           </div>
+          <button class="btn btn-light" onclick="darkMode()"><i class="bi bi-lightbulb-fill"></i></button>
         </div>
     </nav>
 
@@ -46,7 +48,7 @@
           <h1 class="fw-light text-white"><img src="/frontend/resources/logo.svg" alt="App logo" width="50" height="50">BooksApp</h1>
           <p class="lead text-white">Simple app to rate books</p>
           <p>
-            <a href="./browse" class="btn btn-light my-2">Browse books</a>
+            <a href="./browse" class="btn my-2 btn-light">Browse books</a>
             <a href="./add" class="btn btn-secondary my-2">Add book</a>
           </p>
         </div>
@@ -54,14 +56,13 @@
     </section>
   
     <div class="album py-5 bg-light">
-      <div class="text-center fs-1">Top rated books</div>
+      <div class="text-center text-dark fs-1">Top rated books</div>
       <div class="container">
   
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
             <div class="card shadow-sm">
               <div class="img-wrapper">
-                <div class="top-right">Top Right</div>
                 <img id="bookCover1" src="" alt="Book cover" class="img-fluid"></img>
               </div>
   
@@ -81,7 +82,9 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img id="bookCover2" alt="Book cover" src="" class="img-fluid"></img>
+              <div class="img-wrapper">
+                <img id="bookCover2" alt="Book cover" src="" class="img-fluid"></img>
+              </div>
   
               <div class="card-body">
                 <p class="card-text" id="bookName2"></p>
@@ -99,7 +102,9 @@
           </div>
           <div class="col">
             <div class="card shadow-sm">
-              <img id="bookCover3" alt="Book cover" src="" class="img-fluid"></img>
+              <div class="img-wrapper">
+                <img id="bookCover3" alt="Book cover" src="" class="img-fluid"></img>
+              </div>              
   
               <div class="card-body">
                 <p class="card-text" id="bookName3"></p>
@@ -128,5 +133,7 @@
     <!-- Own scripts -->
     <script src="/frontend/js/index.js"></script>
     <script src="/frontend/js/get-rating.js"></script>
+    <script src="/frontend/js/add-favorites.js"></script>
+    <script src="/frontend/js/dark-mode.js"></script>
 </body>
 </html>
