--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/frontend/styles/album.css">
     <title>BooksApp</title>
 </head>
-<body>
+<body onload="darkMode()">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="">
