dark change on home page

--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -38,7 +38,7 @@
               </li>
             </ul>
           </div>
-          <button class="btn btn-light" onclick="darkMode()"><i class="bi bi-lightbulb-fill"></i></button>
+          <button class="btn btn-light" onclick="toggleLocalStorage(); darkMode();"><i class="bi bi-lightbulb-fill"></i></button>
         </div>
     </nav>
 
@@ -133,7 +133,6 @@
     <!-- Own scripts -->
     <script src="/frontend/js/index.js"></script>
     <script src="/frontend/js/get-rating.js"></script>
-    <script src="/frontend/js/add-favorites.js"></script>
     <script src="/frontend/js/dark-mode.js"></script>
 </body>
 </html>
