--- a/frontend/views/add.ejs
+++ b/frontend/views/add.ejs
@@ -7,11 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/frontend/styles/style.css">
     <link rel="stylesheet" href="/frontend/styles/add-book.css">
     <title>BooksApp</title>
 </head>
-<body>
+<body onload="darkMode()">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="./">
@@ -37,6 +38,7 @@
           </li>
         </ul>
       </div>
+      <button class="btn btn-light" onclick="toggleLocalStorage(); darkMode();"><i class="bi bi-lightbulb-fill"></i></button>
     </div>
   </nav>
 
@@ -76,5 +78,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="/frontend/js/validate.js"></script>
   <script src="/frontend/js/add-book.js"></script>
+  <script src="/frontend/js/dark-mode.js"></script>
 </body>
 </html>
