--- a/frontend/views/browse.ejs
+++ b/frontend/views/browse.ejs
@@ -7,12 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/frontend/styles/style.css">
     <link rel="stylesheet" href="/frontend/styles/album.css">
     <link rel="stylesheet" href="/frontend/styles/rate.css">
     <title>BooksApp</title>
 </head>
-<body>
+<body onload="darkMode()">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="./">
@@ -38,6 +39,7 @@
           </li>
         </ul>
       </div>
+      <button class="btn btn-light" onclick="toggleLocalStorage(); darkMode();"><i class="bi bi-lightbulb-fill"></i></button>
     </div>
   </nav>
   
@@ -241,5 +243,6 @@
   <script src="/frontend/js/pagination.js"></script>
   <script src="/frontend/js/give-rating.js"></script>
   <script src="/frontend/js/loading.js"></script>
+  <script src="/frontend/js/dark-mode.js"></script>
 </body>
 </html>
