updated dark mode on browse page loading

--- a/frontend/views/browse.ejs
+++ b/frontend/views/browse.ejs
@@ -43,7 +43,7 @@
     </div>
   </nav>
   
-  <div id="loading" class="position-absolute top-50 start-50 translate-middle">
+  <div id="loading" class="position-absolute top-50 start-50 translate-middle bg-light">
     <div class="progress position-absolute top-50 start-50 translate-middle" style="width: 50%">
         <div id="progress" class="progress-bar bg-info" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
